--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../static/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <title>Test Task</title>
     </head>
     <body>
@@ -52,5 +52,5 @@
             </tbody>
         </table>
     </body>
-    <script src="../static/script.js"></script>
+    <script src="script.js"></script>
 </html>
